[gd_scene load_steps=2 format=2]

[ext_resource path="res://screens/gui/updates.gd" type="Script" id=1]

[node name="Updates" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TopBar" type="HFlowContainer" parent="."]
margin_right = 1600.0
margin_bottom = 40.0

[node name="ManualCheck" type="Button" parent="TopBar"]
margin_right = 243.0
margin_bottom = 40.0
text = "DEFAULT_GUI_CHECK_FOR_UPDATES"

[node name="AutoCheckToggle" type="CheckButton" parent="TopBar"]
margin_left = 247.0
margin_right = 601.0
margin_bottom = 40.0
text = "DEFAULT_GUI_AUTO_CHECK_FOR_UPDATES"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 44.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Updates" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1600.0
size_flags_horizontal = 3

[node name="LoadingLabel" type="Label" parent="."]
visible = false
margin_top = 680.0
margin_right = 1600.0
margin_bottom = 694.0
size_flags_horizontal = 3
size_flags_vertical = 6
align = 1
valign = 1

[node name="LoadingTimer" type="Timer" parent="LoadingLabel"]
wait_time = 0.1
one_shot = true
